// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Pages : State : State grade renders correctly 1`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade a"
    src="test-file-stub"
    width="28px"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 2`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade A+"
    src="test-file-stub"
    width="28px"
  />
</p>
`;

exports[`Components : Pages : State : State grade renders correctly 3`] = `
<p
  className="state-grade stateGrade"
>
  <span>
    Current 
    <a
      href="/state-grades"
    >
      data quality grade
    </a>
    :
  </span>
  <img
    alt="Grade na"
    src="test-file-stub"
    width="28px"
  />
</p>
`;
